--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Dr. Alex Chen - R&D Profile</title>
+    <meta name="description" content="R&D Talent Search - Find researchers, engineers, and innovators across AI/ML, Biochemistry, and Materials Science" />
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XJ7F6X7WWD"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XJ7F6X7WWD');
+    </script>
+
+    <title>R&D Talent Search</title>
   </head>
   <body>
     <div id="root"></div>
