--- a/public/index.html
+++ b/public/index.html
@@ -18,5 +18,8 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- ClustrMaps -->
+    <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=DnX4U49r-goWebOtCZlPxfc-rDCA8J0TrXwSt_OCikM&cl=ffffff&w=a"></script>
   </body>
 </html>
