Enable normal tracking

--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,17 @@
     </script>
 
     <title>R&D Talent Search</title>
+    
+    <style>
+      #clustrmaps { display: none !important; }
+    </style>
   </head>
   <body>
     <div id="root"></div>
 
     <!-- ClustrMaps -->
-    <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=DnX4U49r-goWebOtCZlPxfc-rDCA8J0TrXwSt_OCikM&cl=ffffff&w=a"></script>
+    <script type='text/javascript' id='clustrmaps'
+      src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=70&t=n&d=DnX4U49r-goWebOtCZlPxfc-rDCA8J0TrXwSt_OCikM&co=ffffff&cmo=3acc3a&cmn=ff5353&ct=808080'>
+    </script>
   </body>
 </html>
